# ximea_ROS2_driver

./: .gitignore  CMakeList.txt  README.md  package.xml
ximea_ros2_cam/: CMakeLists.txt  package.xml
ximea_ros2_cam/config/: xiCam1_config.yaml  xiCam2_config.yaml  xi_cam1_config.yaml  xi_cam2_config.yaml  xi_cam_config.yaml
ximea_ros2_cam/include/ximea_ros2_cam/: ximea_ros2_cam.hpp
ximea_ros2_cam/launch/: multipleCam.launch.py  multiple_camera.launch.py  xiCam.launch.xml  xiCam2.launch.xml
ximea_ros2_cam/src/: ximea_ros2_cam.cpp
