<?xml version="1.0"?>
<package format="2">
  <name>ximea_ROS2_driver</name>
  <version>0.0.0</version>
  <description>Metapackage for the ximea_ros2_cam package</description>
  <maintainer email="victor.matos@fieb.org.br">Victor Matos</maintainer>
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>ximea_ros2_cam</exec_depend>
</package>
